fixed typos in internshipAds, switched every table so that everywhere the table needed eiter student id or employee id, they now need user_id of student or employee